care/force-app/main/default/objects/CCC_Opportunity_StageName_Map__mdt/CCC_Opportunity_StageName_Map__mdt.object-meta.xml
<CustomObject>
    <description>Maps a Galore contact status to an Opportunity StageName. This is used in the contract web hook.</description>
    <label>CCC Opportunity StageName Map</label>
    <pluralLabel>CCC Opportunity StageName Maps</pluralLabel>
</CustomObject>