care/force-app/main/default/objects/CCC_Opportunity_StageName_Map__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This mapping will be ignored if marked inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>