care/force-app/main/default/objects/CCC_Opportunity_StageName_Map__mdt/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>The Contract status from Galore</description>
    <label>Contract Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>