care/force-app/main/default/objects/CCC_Opportunity_StageName_Map__mdt/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <description>The stage name for the Opportunity</description>
    <label>Opportunity StageName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>